fix: fix bg preview colors and rich text color in dark mode

--- a/packages/app-page-builder-theme/src/styles/variables.scss
+++ b/packages/app-page-builder-theme/src/styles/variables.scss
@@ -39,3 +39,7 @@ body{
   --webiny-theme-color-border: #{$webiny-pb-theme-color-border};
   --webiny-theme-border-radius: #{$webiny-pb-theme-border-radius};
 }
+
+body.dark-theme {
+  --webiny-theme-color-text-primary: var(--mdc-theme-text-primary-on-background);
+}
